# c2st

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  wiki.yml
c2st/: check.py
c2st/classifiers/: skorch.py  xgboost.py
rsc/: c2st_interpretability.ipynb  c2st_quality_study.ipynb  c2st_results.ipynb  early_results.csv  nn_results.csv  rf_results.csv  xgboost_early_stopping.py
rsc/notebooks/: run_local.sh  small_study.py
src/c2st/: check.py  check_torch.py  utils.py
src/c2st/classifiers/: skorch.py  xgboost.py
tests/: metrics_test.py  test_c2st.py  test_metrics.py  test_skorch_clf.py  test_utils.py  test_xgboost_clf.py
