[tool.poetry]
name = "c2st"
version = "0.1.0"
description = ""
authors = ["Peter Steinbach <p.steinbach@hzdr.de>"]

[tool.poetry.dependencies]
python = ">3.7,<3.11"
scikit-learn = "^1.0.2"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
ipykernel = "^6.7.0"
#scipy = ">=1.7.2" #required for seaborn at the time of writing

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
