[tool.poetry]
name = "c2st"
version = "0.1.0"
description = ""
authors = ["Peter Steinbach <p.steinbach@hzdr.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scikit-learn = "^1.0.2"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
ipykernel = "^6.7.0"
jupytext = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
